# dbg_py3_loader

./: CMakeLists.txt  README.md
.github/workflows/: win64-build.yml  win86-build.yml
dbg_py3_loader/: CMakeLists.txt
dbg_py3_loader/includes/: dbg_py3_loader.h  plugin.h  pluginmain.h
dbg_py3_loader/src/: exports.cpp  plugin.cpp  pluginmain.cpp  test.cpp
